Day-11 multi-sg-same-cidr-traditional-way/main.tf
provider "aws" {
  
}

resource "aws_vpc" "name" {
  cidr_block = "10.0.0.0/16"
  tags = {Name="Custom_Vpc"}
}

resource "aws_security_group" "name" {
  vpc_id = aws_vpc.name.id
  ingress {
    from_port = 80
    to_port = 80
    protocol = "TCP"
    cidr_blocks = [ "0.0.0.0/0" ]
  }
  ingress {
    from_port = 22
    to_port = 22
    protocol = "TCP"
    cidr_blocks = [ "0.0.0.0/0" ]
  }
  ingress {
    from_port = 443
    to_port = 443
    protocol = "TCP"
    cidr_blocks = [ "0.0.0.0/0" ]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}
